<resources>
    <string name="app_name">Movie TvShow</string>
    <string name="movie">Movie</string>
    <string name="tvshow">Tv Show</string>
    <string name="title">title</string>
    <string name="description">Deskripsi</string>
    <string name="genre">Genre</string>
    <string name="runtime">Runtime</string>
    <string name="release">release</string>
    <string name="release_">Rilis</string>
    <string name="durasi">Durasi</string>
    <string name="poster">poster</string>
    <string name="favorited">Favorited</string>
    <string name="batal_hapus">Batalkan Penghapusan?</string>
    <string name="ya">Ya</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Maps</string>
    <string name="menu_favorite">Favorite</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>

    <string name="baseUrlImage">https://image.tmdb.org/t/p/w500</string>
    <string name="title_favorite">Favorites</string>
    <string name="popularity">Popularity</string>
    <string name="banner">banner</string>
    <string name="logo">logo</string>
    <string name="icon_tv">icon tv</string>
</resources>